estrutura finalizada - conteudo precisa atualizar

--- a/ContentWeb/web/index.html
+++ b/ContentWeb/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -19,11 +19,11 @@
     <!--  -->
 
     <link rel="stylesheet" href="styles/styleWeb.css">
-    <title>Institucional || Home </title>
+    <title>Institucional | Home </title>
 </head>
 
 <body>
-    <div class="divBlur"> </div>
+    <div class="divBlur"></div>
     <div class="sectionInitial">
         <header>
             <nav class="navbar">
@@ -32,9 +32,16 @@
                     <p>CACAU CONTROL</p>
                 </div>
                 <ul>
+                    <a href="index.html">
+                        <li>Inicio</li>
+                    </a>
+                    <li>Serviços</li>
+                    <li>Simulador</li>
                     <li>Planos</li>
-                    <li>Projetos</li>
                     <li>Contato</li>
+                    <a href="../dashBoard/dashBoard.html">
+                        <li>DashBoard</li>
+                    </a>
                 </ul>
                 <div class="user">
                     <p>Cadastro</p>
@@ -48,14 +55,15 @@
         <div class="contentInitial">
             <div class="maintext">
                 <h1>
-                    Sua felicidade é o nosso
-                    ingrediente favorito !
+                    O Brasil de volta ao topo !!!
                 </h1>
                 <span>
                     vamos começar nossa jornada para minimizar os
                     desperdicios da sua plantação.
                 </span>
-                <button>Dashboard</button>
+
+                <!-- link para scroll -->
+                <a href="#just"> <button> Como assim?</button></a>
             </div>
 
             <div class="imgInitial">
@@ -63,13 +71,14 @@
             </div>
         </div>
     </div>
-
+    <a name="just"></a>
     <div class="divJustificativa">
         <div class="divImgJustificativa"><img src="imgs/imgVassouraBruxa.jpg" alt=""></div>
         <div class="divContentJustificativa">
             <h1>Tudo começou em 1980 ...</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consequatur quos quis veritatis deleniti nulla vero eum perferendis delectus! Rem accusamus nihil hic amet animi nostrum quam eum sapiente 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consequatur quos 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consequatur quos quis veritatis deleniti
+                nulla vero eum perferendis delectus! Rem accusamus nihil hic amet animi nostrum quam eum sapiente
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consequatur quos
             </p>
         </div>
     </div>
@@ -84,7 +93,8 @@
         <div class="card">
             <i class="fa fa-solid fa-seedling"></i>
             <h2>Aumento da qualidade</h2>
-            <p>Com o monitoramento constante, vamos intensificar as checagens do seu para assim aumentar a qualidade
+            <p>Com o monitoramento constante, vamos intensificar as checagens da sua plantação para assim aumentar a
+                qualidade
                 deles.</p>
         </div>
         <div class="card">
@@ -102,7 +112,8 @@
 
     <div class="divInfo">
         <h2 class="h2Contratar">Plantação livre de pragas</h2>
-        <h4 class="h4Contratar h4Info">Nosso sistema é capaz de avisar a você as condições para que uma praga se propague na sua plantação</h4>
+        <h4 class="h4Contratar h4Info">Nosso sistema é capaz de avisar a você as condições para que uma praga se
+            propague na sua plantação</h4>
     </div>
 
     <div class="divYouLike">
@@ -144,9 +155,18 @@
                 <h1>Veja o que os clientes estão dizendo</h1>
             </div>
             <div class="divAvaliacoes">
-                <!-- icon aspas -->
-                <!-- icon 5 estrelas -->
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</h2>
+                <div class="divIconsTestemunhos">
+                    <i class="fa fa-solid fa-quote-left"></i>
+                    <div class="divStars">
+                        <i class="fa fa-solid fa-star"></i>
+                        <i class="fa fa-solid fa-star"></i>
+                        <i class="fa fa-solid fa-star"></i>
+                        <i class="fa fa-solid fa-star"></i>
+                        <i class="fa fa-solid fa-star"></i>
+                    </div>
+                </div>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim</h2>
             </div>
             <div class="divAvaliacoesIdentidade">
                 <h5>Leandro</h5>
@@ -154,6 +174,49 @@
             </div>
         </div>
     </div>
+
+    <div class="divNossoTime">
+        <div class="divTextosMinhaEquipe">
+            <h3>Porquê escolher a nós?</h3>
+            <h2>
+                Justamente pelo
+                fato de sua plantação
+                ter a possibilidade de
+                ser perdida e você não
+                saber
+            </h2>
+        </div>
+        <div class="divsFotos">
+            <div class="itemTeam"></div>
+            <div class="itemTeam"></div>
+            <div class="itemTeam"></div>
+            <div class="itemTeam"></div>
+            <div class="itemTeam"></div>
+            <div class="itemTeam"></div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="divContentItemsFooter">
+            <div class="itemsFooter">
+                <h3>Cacau Control</h3>
+                <span>O Brasil de volta ao topo !!!</span>
+                <div class="divIconsFooter">
+                    <i class="fa fa-brands fa-linkedin"></i>
+                    <i class="fa fa-brands fa-facebook"></i>
+                    <i class="fa fa-brands fa-twitter"></i>
+                    <i class="fa fa-brands fa-whatsapp"></i>
+                </div>
+            </div>
+            <div class="itemsFooter">
+                <h3>Empresa</h3>
+                <a href="">Preços</a>
+            </div>
+        </div>
+        <div class="divCopy">
+            Copyright @ Cacau Control 2022. Todos os direitos reservados
+        </div>
+    </footer>
 </body>
 
 </html>
