Atualização dos Textos e Correções Ortográficas, att do style de alguns textos

--- a/ContentWeb/web/index.html
+++ b/ContentWeb/web/index.html
@@ -58,7 +58,7 @@
                     O Brasil de volta ao topo !!!
                 </h1>
                 <span>
-                    vamos começar nossa jornada para minimizar os
+                    Uma jornada para minimizar os
                     desperdicios da sua plantação.
                 </span>
 
@@ -75,10 +75,10 @@
     <div class="divJustificativa">
         <div class="divImgJustificativa"><img src="imgs/imgVassouraBruxa.jpg" alt=""></div>
         <div class="divContentJustificativa">
-            <h1>Tudo começou em 1980 ...</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consequatur quos quis veritatis deleniti
-                nulla vero eum perferendis delectus! Rem accusamus nihil hic amet animi nostrum quam eum sapiente
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consequatur quos
+            <h1>Tudo começou em 1989 ...</h1>
+            <p>No auge da produção do cacau, o Brasil - lider na exportação desse fruto - viu suas fazendas dizimadas devido a praga "Vassoura de Bruxa", responsável por ocasionar a queda de 66% de seu valor. <br><br>
+                Hoje, cerca de 40% da produtividade das plantações são perdidas devido ao ataque de pragas. <br><br>
+                Com as mudanças climáticas, é esperado um aumento exponencial na ploriferação de doenças e pragas.
             </p>
         </div>
     </div>
@@ -86,34 +86,31 @@
     <div class="divCards">
         <div class="card">
             <i class="fa fa-solid fa-chart-line"></i>
-            <h2>Minimizar os prejuizos</h2>
-            <p>Plantações com alto nivel de temperatura ou umidade vão gerar altos niveis de desperdicio, vamos diminuir
+            <h2>Minimizar os prejuízos</h2>
+            <p>Plantações com grandes variações de temperatura e/ou umidade geram altos níveis de desperdícios. Vamos diminuir
                 isso? </p>
         </div>
         <div class="card">
             <i class="fa fa-solid fa-seedling"></i>
             <h2>Aumento da qualidade</h2>
-            <p>Com o monitoramento constante, vamos intensificar as checagens da sua plantação para assim aumentar a
-                qualidade
-                deles.</p>
+            <p>Além do desperdício, a temperatura e umidade são fundamentais para a qualidade dos frutos. Nosso sistema posibilita o controle, em tempo real, de sua plantação.</p>
         </div>
         <div class="card">
             <i class="fa fa-solid fa-sun"></i>
             <h2>Monitoramento</h2>
-            <p>Com o monitoramento 24 horas e um sistema completo de alertas, damos a você embasamento para ser acertivo
-                em suas decisões </p>
+            <p>Com o monitoramento 24 horas e um sistema completo de alertas, o sistema da Cacau Control é o parceiro ideal na tomada de decisão. </p>
         </div>
     </div>
     <div class="imgContratar">
-        <h2 class="h2Contratar">Monitoramento para o próximo nível</h2>
-        <h4 class="h4Contratar">Nossa filosofia é a seguranca de sua plantação</h4>
+        <h2 class="h2Contratar">Monitoramento para o próximo nível!</h2>
+        <h4 class="h4Contratar">Nossa filosofia é a segurança de sua plantação</h4>
         <button>Contratar</button>
     </div>
 
     <div class="divInfo">
         <h2 class="h2Contratar">Plantação livre de pragas</h2>
-        <h4 class="h4Contratar h4Info">Nosso sistema é capaz de avisar a você as condições para que uma praga se
-            propague na sua plantação</h4>
+        <h4 class="h4Contratar h4Info">Nosso sistema é capaz de avisá-lo as condições para que pragas se
+            propague em sua plantação</h4>
     </div>
 
     <div class="divYouLike">
@@ -122,7 +119,7 @@
                 <h2>Achamos que vai gostar</h2>
                 <div class="itemYouLike">
                     <i class="fa fa-solid fa-clock"></i>
-                    <span>Monitoramento 24 Horas</span>
+                    <span>Monitoramento 24 horas</span>
                 </div>
                 <div class="itemYouLike">
                     <i class="fa fa-solid fa-shield"></i>
@@ -130,18 +127,18 @@
                 </div>
                 <div class="itemYouLike">
                     <i class=" fa fa-solid fa-lightbulb"></i>
-                    <span>adaptamos ao seu negócio</span>
+                    <span>Adaptamos ao seu negócio</span>
                 </div>
             </div>
             <div class="divCalculators">
                 <div class="divCalcItem">
-                    <h1>Calculadora de perdas</h1>
-                    <p>Calcule de forma gratuita as perdas relativas a sua plantação</p>
+                    <h1>Calcule perdas</h1>
+                    <p>Calcule, de forma gratuita, as perdas financeiras <br>de sua plantação.</p>
                     <button>Calcular perdas</button>
                 </div>
                 <div class="divCalcItem">
-                    <h1>Faça seu orçamento</h1>
-                    <p>Orçamento baseado no tamanho de sua fazenda</p>
+                    <h1>Realize um pré-orçamento</h1>
+                    <p>Orçamento baseado no tamanho de sua fazenda.</p>
                     <button>Fazer seu orçamento</button>
                 </div>
             </div>
@@ -165,25 +162,22 @@
                         <i class="fa fa-solid fa-star"></i>
                     </div>
                 </div>
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim</h2>
+                <h2>Utilizando o software da Cacau Control consegui diminuir os desperdícios que ocorriam na minha fazenda e aumentar a qualidade dos frutos, agora consigo ter maiores receitas.</h2>
             </div>
             <div class="divAvaliacoesIdentidade">
                 <h5>Leandro</h5>
-                <p>Fazendeiro</p>
+                <p>Fazendeiro - Ilheus/BA</p>
             </div>
         </div>
     </div>
 
     <div class="divNossoTime">
         <div class="divTextosMinhaEquipe">
-            <h3>Porquê escolher a nós?</h3>
+            <h3>Porquê escolher Cacau Control?</h3>
             <h2>
-                Justamente pelo
-                fato de sua plantação
-                ter a possibilidade de
-                ser perdida e você não
-                saber
+                Lutamos contra um inimigo escondido.
+                <h4>Queremos transformar a temperatura e a umidade em aliados, <br>
+                para assim, eliminar desperdícios e gerar maior qualidade nos frutos das plantações brasileiras. Trazendo o Brasil de volta ao topo!</h4> 
             </h2>
         </div>
         <div class="divsFotos">
@@ -214,7 +208,7 @@
             </div>
         </div>
         <div class="divCopy">
-            Copyright @ Cacau Control 2022. Todos os direitos reservados
+            Copyright @ Cacau Control LTDA. 2022. Todos os direitos reservados
         </div>
     </footer>
 </body>
