--- a/ContentWeb/dashBoard/dashBoard.html
+++ b/ContentWeb/dashBoard/dashBoard.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../js/funcoes.js"></script>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style1.css">
     <link rel="icon" href="imgs/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!-- link do chartJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
     </script>
@@ -18,78 +21,151 @@
     <!-- link font Awesome -->
     <script src="https://kit.fontawesome.com/0de1e0c120.js" crossorigin="anonymous"></script>
 
-    <title>Cacau Control || Home</title>
+    <title>Cacau Control | DashBoard</title>
 </head>
 
-<body>
+<body onload="validarSessao(), atualizarFeed()">
     <!-- side bar -->
     <div class="sideBar">
-        <div class="divItemSideB closeIcon"><i class="fas fa-window-close"></i></div>
-        <div class="divItemSideB SideActive"><i class="fas fa-cloud-sun"></i></div>
-        <div class="divItemSideB"><a href="rendimentos.html"><i class="fa fa-regular fa-money-bill"></a></i></div>
-        <div class="divItemSideB"><i class="fas fa-cog"></i></div>
 
+        <div class="divUser">
+            <img src="imgs/logo.png" alt="">
+            <h3 id="b_usuario">usuário</h3>
+        </div>
+        <div class="divItems">
+            <div class="divItemSide sideBActive">
+                <i class="fa fa-solid fa-cloud-sun"></i>
+                <a href="">Gráficos</a>
+            </div>
+            <div class="divItemSide">
+                <i class="fa fa-regular fa-money-bill"></i>
+                <a href="rendimentos.html">Rendimentos</a>
+            </div>
+        </div>
+        <div class="configs">
+            <div class="divitemsConfigs">
+                <div class="divItemConf">
+                    <i class="fa fa-solid fa-door-open" onclick="limparSessao()"></i>
+                </div>
+                <div class="divItemConf">
+                    <i class="fa fa-solid fa-gear"></i>
+                </div>
+
+            </div>
+
+        </div>
     </div>
     <!--  -->
     <div class="contentAll">
-        <!-- navbar -->
-        <nav>
-            <div class="logoTipo">
-                <img src="imgs/logo.png" alt="logo">
-                <span>Cacau Control</span>
-            </div>
-            <div class="divGraficosUser">
-                <img src="imgs/logoUser.png" alt=""> Lorem ipsum
-            </div>
-        </nav>
-        <!--  -->
-
-        <div class="divContentSelectSensorData">
-            <div class="tempSensor">
-                <span>Temperatura</span>
-                <!-- div de identificacao pela cor do graficio  -->
-                <div class="bar"></div>
-                <!--  -->
-                <img class="alert" src="imgs/alertIcon.png" alt="">
-                <div class="divSensor">
-                    <select name="selectSensor" id="selectSensor">
-                    <option value="">Sensor 1 </option>
-                    <option value="">Sensor 2</option>
-                    <option value="">Sensor 3</option>
-                </select>
-                    <img src="imgs/sensorIcon.png" alt="">
+        <div class="divnavDash">
+            <div class="divInfoIndex">
+                <div class="divItemInfo">
+                    <div class="itemInfoColor normal"></div>
+                    <h4>Normal</h4>
+                </div>
+                <div class="divItemInfo">
+                    <div class="itemInfoColor alerta"></div>
+                    <h4>Alerta</h4>
+                </div>
+                <div class="divItemInfo">
+                    <div class="itemInfoColor critico"></div>
+                    <h4>Critico</h4>
                 </div>
             </div>
-            <div class="dateOptions">
-                <input type="date" name="" id="">
-                <div class="divMoreIcon">
-                    <img src="imgs/moreIcon.png" alt="">
+            <div class="divNavtime">
+                <div class="divHora">10:15 AM</div>
+                <div class="divData">17/04/22</div>
+                <div class="divUser">
+                    <img src="imgs/logo.png" alt="">
                 </div>
             </div>
         </div>
 
-        <div class="divGrafico">
-            <div class="painel">
-                <canvas id="myChartTemp" style="width:90%;max-width:1000px"></canvas>
+        <div class="contentDashAll">
+            <div class="divLeftDash">
+                <div class="divSensors">
+                    <div class="itemSensor itemSensorActive">Sens.1</div>
+                    <div class="itemSensor">Sens.2</div>
+                    <div class="itemSensor">Sens.3</div>
+                </div>
+
+                <div class="divControllers">
+                    <div class="painelController">
+                        <h2>Temperatura</h2>
+                        <div class="divPainelItem temp">
+                            <i class="fa fa-solid fa-temperature-low"></i>
+                            <h1>30<span>℃</span></h1> <i class="fa fa-solid fa-arrow-up"></i>
+                        </div>
+                    </div>
+                    <div class="painelController">
+                        <h2>Umidade</h2>
+                        <div class="divPainelItem umi">
+                            <i class="fa fa-solid fa-water"></i>
+                            <h1>60<span>%</span></h1> <i class="fa fa-solid fa-arrow-down"></i>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="divGraficos">
+                    <div class="divItemGrafico">
+                        <canvas id="myChartTemp" style="width:90%;max-width:1000px"></canvas>
+                    </div>
+                    <div class="divItemGrafico">
+                        <canvas id="myChartUmidade" style="width:90%;max-width:2000px"></canvas>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="divRightDash">
+                <div class="divlabelAlarms">
+                    <h4>Alarmes</h4>
+                </div>
+                <div class="divCardAlarms">
+
+                    <div class="itemCardAlarm critico">
+                        <h2>Sens.1</h2>
+                        <i class="fa fa-solid fa-satellite-dish"></i>
+
+                        <div class="divInfoAlarm critico">CRITICO</div>
+                    </div>
+
+                    <div class="itemCardAlarm normal">
+                        <h2>Sens.2</h2>
+                        <i class="fa fa-solid fa-satellite-dish"></i>
+                        <div class="divInfoAlarm normal">NORMAL</div>
+                    </div>
+                    <div class="itemCardAlarm alerta">
+                        <h2>Sens.3</h2>
+                        <i class="fa fa-solid fa-satellite-dish"></i>
+                        <div class="divInfoAlarm alerta">ALERTA</div>
+                    </div>
+                    <div class="itemCardAlarm alerta">
+                        <h2>Sens.4</h2>
+                        <i class="fa fa-solid fa-satellite-dish"></i>
+                        <div class="divInfoAlarm alerta">ALERTA</div>
+                    </div>
+
+                    <div class="itemCardAlarm critico">
+                        <h2>Sens.4</h2>
+                        <i class="fa fa-solid fa-satellite-dish"></i>
+                        <div class="divInfoAlarm critico">CRITICO</div>
+                    </div>
+                    <div class="itemCardAlarm critico">
+                        <h2>Sens.5</h2>
+                        <i class="fa fa-solid fa-satellite-dish"></i>
+                        <div class="divInfoAlarm critico">CRITICO</div>
+                    </div>
+                    <div class="itemCardAlarm critico">
+                        <h2>Sens.6</h2>
+                        <i class="fa fa-solid fa-satellite-dish"></i>
+                        <div class="divInfoAlarm critico">CRITICO</div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
-        <div class="divContentSelectSensorData">
-            <div class="tempSensor">
-                <span>Umidade</span>
-                <!-- div de identificacao pela cor do graficio  -->
-                <div class="bar divUmidade"></div>
-                <!--  -->
-                <img class="alert" src="imgs/alertIcon.png" alt="">
-
-            </div>
-        </div>
-
-        <div class="divGrafico DivUmidade">
-            <div class="painel">
-                <canvas id="myChartUmidade" style="width:90%;max-width:2000px"></canvas>
-            </div>
-        </div>
     </div>
 </body>
 
@@ -97,3 +173,164 @@
 
 <script src="scripts/graficoTemperatura.js"></script>
 <script src="scripts/graficoUmidade.js"></script>
+
+<script>
+    let proximaAtualizacao;
+
+window.onload = obterDadosGrafico(1);
+
+b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
+
+//verificar_autenticacao();
+
+// altere aqui como os dados serão exibidos
+// e como são recuperados do BackEnd
+function obterDadosGrafico(idAquario) {
+    if (proximaAtualizacao != undefined) {
+        clearTimeout(proximaAtualizacao);
+    }
+
+    fetch(`/medidas/ultimas/${idAquario}`, { cache: 'no-store' }).then(function (response) {
+        if (response.ok) {
+            response.json().then(function (resposta) {
+                console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+                resposta.reverse();
+
+                plotarGrafico(resposta, idAquario);
+            });
+        } else {
+            console.error('Nenhum dado encontrado ou erro na API');
+        }
+    })
+        .catch(function (error) {
+            console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+        });
+
+}
+
+// só altere aqui se souber o que está fazendo!
+function plotarGrafico(resposta, idAquario) {
+    console.log('iniciando plotagem do gráfico...');
+
+    var dados = {
+        labels: [],
+        datasets: [
+            {
+                yAxisID: 'y-umidade',
+                label: 'Umidade',
+                borderColor: '#32B9CD',
+                backgroundColor: '#32b9cd8f',
+                fill: true,
+                data: []
+            },
+            {
+                yAxisID: 'y-temperatura',
+                label: 'Temperatura',
+                borderColor: '#FFF',
+                backgroundColor: '#32b9cd8f',
+                fill: true,
+                data: []
+            }
+        ]
+    };
+
+    for (i = 0; i < resposta.length; i++) {
+        var registro = resposta[i];
+        dados.labels.push(registro.momento_grafico);
+        dados.datasets[0].data.push(registro.umidade);
+        dados.datasets[1].data.push(registro.temperatura);
+    }
+
+    console.log(JSON.stringify(dados));
+
+    var ctx = canvas_grafico.getContext('2d');
+    window.grafico_linha = Chart.Line(ctx, {
+        data: dados,
+        //Configurações do gráfico
+        options: {
+            responsive: true,
+            animation: { duration: 500 },
+            hoverMode: 'index',
+            stacked: false,
+            title: {
+                display: true,
+                text: 'Histórico recente de umidade/temperatura'
+            },
+            scales: {
+                yAxes: [{
+                    type: 'linear',
+                    display: true,
+                    position: 'left',
+                    id: 'y-temperatura',
+                    ticks: {
+                        beginAtZero: true,
+                        max: 100,
+                        min: 0
+                    }
+                }, {
+                    type: 'linear',
+                    display: false,
+                    position: 'right',
+                    id: 'y-umidade',
+                    ticks: {
+                        beginAtZero: true,
+                        max: 100,
+                        min: 0
+                    },
+
+                    gridLines: {
+                        drawOnChartArea: false,
+                    },
+                }],
+            }
+        }
+    });
+
+    function sendData() {
+        var http = new XMLHttpRequest();
+        http.open('POST', 'http://localhost:3000/api/sendData', false);
+        http.send(null);
+    }
+
+    setInterval(() => {
+        sendData();
+    }, 2000);
+
+    //Atualiza os dados de 5 em 5 segundos
+    setTimeout(() => atualizarGrafico(idAquario, dados), 2000);
+}
+
+// só mexer se quiser alterar o tempo de atualização
+// ou se souber o que está fazendo!
+function atualizarGrafico(idAquario, dados) {
+
+    fetch(`/medidas/tempo-real/${idAquario}`, { cache: 'no-store' }).then(function (response) {
+        if (response.ok) {
+            response.json().then(function (novoRegistro) {
+
+                console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
+                console.log(`Dados atuais do gráfico: ${dados}`);
+
+                // tirando e colocando valores no gráfico
+                dados.labels.shift(); // apagar o primeiro
+                dados.labels.push(novoRegistro[0].momento_grafico); // incluir um novo momento
+                dados.datasets[0].data.shift();  // apagar o primeiro de umidade
+                dados.datasets[0].data.push(novoRegistro[0].umidade); // incluir uma nova medida de umidade
+                dados.datasets[1].data.shift();  // apagar o primeiro de umidade
+                dados.datasets[1].data.push(novoRegistro[0].temperatura); // incluir uma nova medida de umidade
+
+                window.grafico_linha.update();
+
+                proximaAtualizacao = setTimeout(() => atualizarGrafico(idAquario, dados), 2000);
+            });
+        } else {
+            console.error('Nenhum dado encontrado ou erro na API');
+            proximaAtualizacao = setTimeout(() => atualizarGrafico(idAquario, dados), 2000);
+        }
+    })
+        .catch(function (error) {
+            console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+        });
+
+}
+</script>
