--- a/ContentWeb/dashBoard/rendimentos.html
+++ b/ContentWeb/dashBoard/rendimentos.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../js/funcoes.js"></script>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style1.css">
     <link rel="icon" href="imgs/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,30 +22,42 @@
     <!-- link font Awesome -->
     <script src="https://kit.fontawesome.com/0de1e0c120.js" crossorigin="anonymous"></script>
 
-    <title>Cacau Control || Home</title>
+    <title>Cacau Control | Rendimentos</title>
 </head>
-
-<body>
+<body onload="validarSessao(), atualizarFeed()">
     <!-- side bar -->
     <div class="sideBar">
-        <div class="divItemSideB closeIcon"><i class="fas fa-window-close"></i></div>
-        <div class="divItemSideB"><a href="dashBoard.html"><i class="fas fa-cloud-sun"></i></a></div>
-        <div class="divItemSideB SideActive"><i class="fa fa-regular fa-money-bill"></i></div>
-        <div class="divItemSideB"><i class="fas fa-cog"></i></div>
 
+        <div class="divUser">
+            <img src="imgs/logo.png" alt="">
+            <h3 id="b_usuario">usuário</h3>
+        </div>
+        <div class="divItems">
+            <div class="divItemSide ">
+                <i class="fa fa-solid fa-cloud-sun"></i>
+                <a href="dashBoard.html">Gráficos</a>
+            </div>
+            <div class="divItemSide sideBActive">
+                <i class="fa fa-regular fa-money-bill"></i>
+                <a href="rendimentos.html">Rendimentos</a>
+            </div>
+        </div>
+        <div class="configs">
+            <div class="divitemsConfigs">
+                <div class="divItemConf">
+                    <a href=""><i class="fa fa-solid fa-door-open" onclick="limparSessao()" ></i></a>
+                </div>
+                <div class="divItemConf">
+                    <i class="fa fa-solid fa-gear"></i>
+                </div>
+
+            </div>
+
+        </div>
     </div>
     <!--  -->
     <div class="contentAll">
         <!-- navbar -->
-        <nav>
-            <div class="logoTipo">
-                <img src="imgs/logo.png" alt="logo">
-                <span>Cacau Control</span>
-            </div>
-            <div class="divGraficosUser">
-                <img src="imgs/logoUser.png" alt=""> Lorem ipsum
-            </div>
-        </nav>
         <!--  -->
         <div class="divContentSelectSensorData">
             <div class="tempSensor">
@@ -60,7 +74,7 @@
 
         <div class="divGrafico">
             <div class="painel">
-                <canvas id="barChart" style="width:90%;max-width:1000px"></canvas>
+                <canvas id="barChart" style="width:50%;max-width:1000px"></canvas>
             </div>
         </div>
         <!-- depois do gráfico de receita -->
