Correções ortográficas e escala dos gráficos

--- a/ContentWeb/dashBoard/dashBoard.html
+++ b/ContentWeb/dashBoard/dashBoard.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="divItemInfo">
                     <div class="itemInfoColor critico"></div>
-                    <h4>Critico</h4>
+                    <h4>Crítico</h4>
                 </div>
             </div>
             <div class="divNavtime">
@@ -127,7 +127,7 @@
                         <h2>Sens.1</h2>
                         <i class="fa fa-solid fa-satellite-dish"></i>
 
-                        <div class="divInfoAlarm critico">CRITICO</div>
+                        <div class="divInfoAlarm critico">CRÍTICO</div>
                     </div>
 
                     <div class="itemCardAlarm normal">
@@ -149,17 +149,17 @@
                     <div class="itemCardAlarm critico">
                         <h2>Sens.4</h2>
                         <i class="fa fa-solid fa-satellite-dish"></i>
-                        <div class="divInfoAlarm critico">CRITICO</div>
+                        <div class="divInfoAlarm critico">CRÍTICO</div>
                     </div>
                     <div class="itemCardAlarm critico">
                         <h2>Sens.5</h2>
                         <i class="fa fa-solid fa-satellite-dish"></i>
-                        <div class="divInfoAlarm critico">CRITICO</div>
+                        <div class="divInfoAlarm critico">CRÍTICO</div>
                     </div>
                     <div class="itemCardAlarm critico">
                         <h2>Sens.6</h2>
                         <i class="fa fa-solid fa-satellite-dish"></i>
-                        <div class="divInfoAlarm critico">CRITICO</div>
+                        <div class="divInfoAlarm critico">CRÍTICO</div>
                     </div>
                 </div>
 
