--- a/ContentWeb/web/index.html
+++ b/ContentWeb/web/index.html
@@ -93,7 +93,7 @@
         <div class="card">
             <i class="fa fa-solid fa-seedling"></i>
             <h2>Aumento da qualidade</h2>
-            <p>Além do desperdício, a temperatura e umidade são fundamentais para a qualidade dos frutos. Nosso sistema posibilita o controle, em tempo real, de sua plantação.</p>
+            <p>Além do desperdício, a temperatura e umidade são fundamentais para a qualidade dos frutos. Nosso sistema possibilita o controle, em tempo real, de sua plantação.</p>
         </div>
         <div class="card">
             <i class="fa fa-solid fa-sun"></i>
