--- a/ContentWeb/web/login cacau control.html
+++ b/ContentWeb/web/login cacau control.html
@@ -35,6 +35,7 @@
                 <h2>Bem vindo!</h2>
                 <h6>Faça o cadastro para ter acesso ao dashboard</h6><br>
                 <button class="btn"><a href="#cadastro"></a>Cadastre-se</button>
+                <button class="btn"><a href="#index"></a>Voltar ao menu</button>
             </div>
             <div class="card">
                 
