Responsividade Login e Correção de textos

--- a/ContentWeb/web/login cacau control.html
+++ b/ContentWeb/web/login cacau control.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="welcome">
                 <h2>Bem vindo!</h2>
-                <h6>Faça o cadastro para ter acesso ao dashboard</h6><br>
+                <h6>Realize seu cadastro para ter acesso ao dashboard</h6><br>
                 <button class="btn"><a href="#cadastro"></a>Cadastre-se</button>
                 <button class="btn"><a href="#index"></a>Voltar ao menu</button>
             </div>
@@ -49,7 +49,7 @@
                     <input id="email_input" type="text" placeholder="E-mail/CPF">
 
                     <span class="tipo_campo"></span>
-                    <input id="senha_input" type="password" placeholder="password">
+                    <input id="senha_input" type="password" placeholder="Password">
 
                     <button class="btn" onclick="entrar()">Entrar</button>
 
