att nome do html e retirada para logar com cpf

--- a/ContentWeb/web/login cacau control.html
+++ b/ContentWeb/web/login cacau control.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>AcquaTec | Login</title>
+    <title>Cacau Control | Login</title>
 
     <script src="./js/funcoes.js"></script>
 
@@ -46,7 +46,7 @@
 
 
                     <span class="tipo_campo"></span>
-                    <input id="email_input" type="text" placeholder="E-mail/CPF">
+                    <input id="email_input" type="text" placeholder="E-mail">
 
                     <span class="tipo_campo"></span>
                     <input id="senha_input" type="password" placeholder="Password">
