--- a/ContentWeb/web/index.html
+++ b/ContentWeb/web/index.html
@@ -63,8 +63,7 @@
                 </span>
 
                 <!-- link para scroll -->
-                <a href="#just"> 
-                <button> Como assim?</button></a>
+                <a href="#just"> <button> Como assim?</button></a>
             </div>
 
             <div class="imgInitial">
