--- a/ContentWeb/web/simulador.html
+++ b/ContentWeb/web/simulador.html
@@ -40,7 +40,7 @@
     custo_total = quantidade_hardware * unidade_hardware
         resposta.innerHTML = 
        `Você precisará de ${quantidade_hardware} hardwares caso queira deixa-los a cada 100m². <br>
-        Cada harware custa 200 reais, incluso a instalação. Nesse sentido você gastará ${custo_total.toLocaleString('pt-br', {style: 'currency', currency:'BRL'})}.`
+        Cada harware custa R$ 200,00, já incluso a instalação. Nesse sentido você gastará ${custo_total.toLocaleString('pt-br', {style: 'currency', currency:'BRL'})}.`
 
         resposta.style.border = "2px solid #8B601F"
         resposta.style.padding = "8px"
