--- a/ContentWeb/web/index.html
+++ b/ContentWeb/web/index.html
@@ -182,12 +182,12 @@
             </h2>
         </div>
         <div class="divsFotos">
-            <div class="itemTeam"></div>
-            <div class="itemTeam"></div>
-            <div class="itemTeam"></div>
-            <div class="itemTeam"></div>
-            <div class="itemTeam"></div>
-            <div class="itemTeam"></div>
+            <img class="itemTeam" src="imgs/mateus.jpeg" alt="mateus">
+            <img class="itemTeam" src="imgs/leka.jpg" alt="leka">
+            <img class="itemTeam" src="imgs/luiz.jpeg" alt="luis">
+            <img class="itemTeam" src="imgs/lucas.jpeg" alt="lucas">
+            <img class="itemTeam" src="imgs/leka.jpg" alt="leka">
+            <img class="itemTeam" src="imgs/leka.jpg" alt="leka">
         </div>
     </div>
 
