atualizando as fotos

--- a/ContentWeb/web/index.html
+++ b/ContentWeb/web/index.html
@@ -186,7 +186,7 @@
             <img class="itemTeam" src="imgs/luiz.jpeg" alt="luis">
             <img class="itemTeam" src="imgs/lucas.jpeg" alt="lucas">
             <img class="itemTeam" src="imgs/bia.jpeg" alt="bia">
-            <img class="itemTeam" src="imgs/leka.jpg" alt="leka">
+            <img class="itemTeam" src="imgs/mauricio.jpeg" alt="mauricio">
         </div>
     </div>
 
