--- a/ContentWeb/public/index.html
+++ b/ContentWeb/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="imgs/logo.png">
+    <link rel="icon" href="web/imgs/logo.png">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     <script src="https://kit.fontawesome.com/0de1e0c120.js" crossorigin="anonymous"></script>
     <!--  -->
 
-    <link rel="stylesheet" href="styles/styleWeb.css">
+    <link rel="stylesheet" href="web/styles/styleWeb.css">
     <title>Institucional | Home </title>
 </head>
 
@@ -28,7 +28,7 @@
         <header>
             <nav class="navbar">
                 <div class="divLogo">
-                    <img src="imgs/logo.png" alt="">
+                    <img src="web/imgs/logo.png" alt="">
                     <p>CACAU CONTROL</p>
                 </div>
                 <ul>
@@ -44,10 +44,9 @@
                     </a>
                 </ul>
                 <div class="user">
-                    <p>Cadastro</p>
-                    <p>Login</p>
+                    <a href="web/cadastro.html"><p>Cadastro</p></a>
+                    <a href="web/login.html"><p>Login</p></a>
                     <i class="fa fa-solid fa-user"></i>
-                    <i class="fa fa-solid fa-user-plus" style="display: none;"></i>
                 </div>
             </nav>
         </header>
@@ -67,13 +66,13 @@
             </div>
 
             <div class="imgInitial">
-                <img src="imgs/imgcacau.jpg" alt="">
+                <img src="web/imgs/imgcacau.jpg" alt="">
             </div>
         </div>
     </div>
     <a name="just"></a>
     <div class="divJustificativa">
-        <div class="divImgJustificativa"><img src="imgs/imgVassouraBruxa.jpg" alt=""></div>
+        <div class="divImgJustificativa"><img src="web/imgs/imgVassouraBruxa.jpg" alt=""></div>
         <div class="divContentJustificativa">
             <h1>Tudo começou em 1989 ...</h1>
             <p>No auge da produção do cacau, o Brasil - lider na exportação desse fruto - viu suas fazendas dizimadas devido a praga "Vassoura de Bruxa", responsável por ocasionar a queda de 66% de seu valor. <br><br>
@@ -181,12 +180,12 @@
             </h2>
         </div>
         <div class="divsFotos">
-            <img class="itemTeam" src="imgs/mateus.jpeg" alt="mateus">
-            <img class="itemTeam" src="imgs/leka.jpg" alt="leka">
-            <img class="itemTeam" src="imgs/luiz.jpeg" alt="luis">
-            <img class="itemTeam" src="imgs/lucas.jpeg" alt="lucas">
-            <img class="itemTeam" src="imgs/bia.jpeg" alt="bia">
-            <img class="itemTeam" src="imgs/mauricio.jpeg" alt="mauricio">
+            <img class="itemTeam" src="web/imgs/mateus.jpeg" alt="mateus">
+            <img class="itemTeam" src="web/imgs/leka.jpg" alt="leka">
+            <img class="itemTeam" src="web/imgs/luiz.jpeg" alt="luis">
+            <img class="itemTeam" src="web/imgs/lucas.jpeg" alt="lucas">
+            <img class="itemTeam" src="web/imgs/bia.jpeg" alt="bia">
+            <img class="itemTeam" src="web/imgs/mauricio.jpeg" alt="mauricio">
         </div>
     </div>
 
