--- a/ContentWeb/public/web/simulador.html
+++ b/ContentWeb/public/web/simulador.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Sensores | Cacau Control</title>
     <link rel="stylesheet" href="styles/styleSimulador.css">
+    <link rel="icon" href="imgs/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
