validações dos campos e máscara do cpf

--- a/ContentWeb/public/index.html
+++ b/ContentWeb/public/index.html
@@ -35,13 +35,14 @@
                     <a href="index.html">
                         <li>Inicio</li>
                     </a>
+                    <a href="#youLike">
                     <li>Serviços</li>
+                </a>
+                    <a href="Calculadora/calculadora.html">
                     <li>Simulador</li>
+                </a>
                     <li>Planos</li>
                     <li>Contato</li>
-                    <a href="../dashBoard/dashBoard.html">
-                        <li>DashBoard</li>
-                    </a>
                 </ul>
                 <div class="user">
                     <a href="web/cadastro.html"><p>Cadastro</p></a>
@@ -112,6 +113,7 @@
             propague em sua plantação</h4>
     </div>
 
+    <a name="youLike"></a>
     <div class="divYouLike">
         <div class="contentYouLike">
             <div class="divContentItemsYouLike">
@@ -133,12 +135,12 @@
                 <div class="divCalcItem">
                     <h1>Calcule perdas</h1>
                     <p>Calcule, de forma gratuita, as perdas financeiras <br>de sua plantação.</p>
-                    <button>Calcular perdas</button>
+                    <button><a href="Calculadora/calculadora.html"> Calcular perdas</a></button>
                 </div>
                 <div class="divCalcItem">
                     <h1>Realize um pré-orçamento</h1>
                     <p>Orçamento baseado no tamanho de sua fazenda.</p>
-                    <button>Fazer seu orçamento</button>
+                    <button><a href="web/simulador.html">Fazer seu orçamento</a></button>
                 </div>
             </div>
         </div>
