--- a/ContentWeb/public/web/cadastro.html
+++ b/ContentWeb/public/web/cadastro.html
@@ -46,21 +46,24 @@
         
                 <div class="formulario">
                     <span class="tipo_campo"></span>
-                    <input id="nome_input" type="text" placeholder="Nome">
+                    <input maxlength="50" id="nome_input" type="text" placeholder="Nome">
 
                     <span class="tipo_campo"></span>
-                    <input id="cpf_input" type="text" placeholder="CPF">
+                    <input onkeypress="masks()" maxlength="14" id="cpf_input" type="text" placeholder="CPF">
+                    <span class="alertaInput" id="alertaInput1"></span>
 
                     <span class="tipo_campo"></span>
-                    <input id="email_input" type="text" placeholder="E-mail">
+                    <input maxlength="50" id="email_input" type="text" placeholder="E-mail">
+                    <span class="alertaInput" id="alertaInput"></span>
 
                     <span class="tipo_campo"></span>
-                    <input id="senha_input" type="password" placeholder="Senha">
+                    <input maxlength="30" id="senha_input" type="password" placeholder="Senha">
 
                     <span class="tipo_campo"></span>
-                    <input id="confirmacao_senha_input" type="password" placeholder="confirme sua senha">
+                    <input maxlength="30" id="confirmacao_senha_input" type="password" placeholder="confirme sua senha">
+                    <span class="alertaInput" id="alertaInput2"></span>
 
-                    <button class="btn" onclick="cadastrar()">Cadastrar</button>
+                    <button  class="btn" onclick="cadastrar()">Cadastrar</button>
 
 
                 </div>
@@ -89,6 +92,18 @@
 
 
 <script>
+
+    function masks(){
+        var cpfVar = cpf_input.value; 
+        if(cpfVar.length == 3){
+            cpf_input.value = cpfVar+"."
+        }else if(cpfVar.length == 7){
+            cpf_input.value = cpfVar+"."
+        }else if(cpfVar.length ==11){
+            cpf_input.value = cpfVar+"-"
+        }
+    }
+
     function cadastrar() {
         aguardar();
 
@@ -99,6 +114,8 @@
         var emailVar = email_input.value;
         var senhaVar = senha_input.value;
         var confirmacaoSenhaVar = confirmacao_senha_input.value;
+        
+
 
         if (nomeVar == "" || cpfVar == "" || emailVar == "" || senhaVar == "" || confirmacaoSenhaVar == "") {
             cardErro.style.display = "block"
@@ -111,23 +128,56 @@
             setInterval(sumirMensagem, 5000)
         }
 
+        if(cpfVar.length<13 ){
+            cardErro.style.display = "block"
+            mensagem_erro.innerHTML = "Preencha completamente seu CPF ";
+            cpf_input.style.border="red 2px solid"
+
+            alertaInput1.innerHTML=`CPF incompleto`
+            alertaInput1.style.display="block"
+            alertaInput1.style.color="red"
+            finalizarAguardar();
+            return false;
+        }else{
+            cpf_input.style.border="green 2px solid"
+            alertaInput1.innerHTML=``
+            setInterval(sumirMensagem, 5000)
+        }
+
+
         if (emailVar.indexOf("@") == -1 || emailVar.indexOf(".com") == -1) {
             cardErro.style.display = "block"
             mensagem_erro.innerHTML = "Ops, e-mail inválido! Verifique e tente novamente.";
+            email_input.style.border="red 2px solid"
+
+            alertaInput.innerHTML=`Email inválido`
+            alertaInput.style.display="block"
+            alertaInput.style.color="red"
             finalizarAguardar();
             return false;
         }
         else {
+            email_input.style.border="green 2px solid"
+            alertaInput.innerHTML=``
             setInterval(sumirMensagem, 5000)
         }
 
         if (senhaVar != confirmacaoSenhaVar) {
             cardErro.style.display = "block"
             mensagem_erro.innerHTML = "As senhas inseridas devem ser iguais para prosseguir!";
+
+            confirmacao_senha_input.style.border="red 2px solid"
+
+            alertaInput2.innerHTML=`Senha diferentes`
+            alertaInput2.style.display="block"
+            alertaInput2.style.color="red"
             finalizarAguardar();
             return false;
         }
         else {
+            confirmacao_senha_input.style.border="green 2px solid"
+
+            alertaInput2.innerHTML=``
             setInterval(sumirMensagem, 5000)
         }
 
@@ -168,6 +218,9 @@
 
     function sumirMensagem() {
         cardErro.style.display = "none"
+        alertaInput.style.display="none"
+        alertaInput1.style.display="none"
+        alertaInput2.style.display="none"
     }
 
 </script>
