--- a/ContentWeb/public/Calculadora/calculadora.html
+++ b/ContentWeb/public/Calculadora/calculadora.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simulador de Perdas | Cacau Control</title>
 <link rel="stylesheet" href="style/calculadora.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Rajdhani:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
