Padronização dos Titulos dos HTMLs

--- a/ContentWeb/public/dashBoard/dashBoard.html
+++ b/ContentWeb/public/dashBoard/dashBoard.html
@@ -21,7 +21,7 @@
     <!-- link font Awesome -->
     <script src="https://kit.fontawesome.com/0de1e0c120.js" crossorigin="anonymous"></script>
 
-    <title>Cacau Control | DashBoard</title>
+    <title>DashBoard | Cacau Control</title>
 </head>
 
 <body onload="validarSessao(), atualizarFeed()">
