--- a/ContentWeb/public/index.html
+++ b/ContentWeb/public/index.html
@@ -19,7 +19,7 @@
     <!--  -->
 
     <link rel="stylesheet" href="web/styles/styleWeb.css">
-    <title>Institucional | Home </title>
+    <title>Institucional - Home | Cacau Control  </title>
 </head>
 
 <body>
