--- a/ContentWeb/public/dashBoard/rendimentos.html
+++ b/ContentWeb/public/dashBoard/rendimentos.html
@@ -22,7 +22,7 @@
     <!-- link font Awesome -->
     <script src="https://kit.fontawesome.com/0de1e0c120.js" crossorigin="anonymous"></script>
 
-    <title>Cacau Control | Rendimentos</title>
+    <title>Rendimentos | Cacau Control | </title>
 </head>
 <body onload="validarSessao(), atualizarFeed()">
     <!-- side bar -->
