--- a/ContentWeb/public/web/login.html
+++ b/ContentWeb/public/web/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Cacau Control | Login</title>
+    <title>Login | Cacau Control</title>
 
     <script src="../js/funcoes.js"></script>
     <link rel="stylesheet" href="../cssNativoProfessor/style.css">
