--- a/ContentWeb/public/Calculadora/calculadora.html
+++ b/ContentWeb/public/Calculadora/calculadora.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simulador de Perdas | Cacau Control  </title>
 <link rel="stylesheet" href="style/calculadora.css">
+<link rel="icon" href="imgs/logo_cacau_control.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
