Trocando preços para planos

--- a/ContentWeb/public/index.html
+++ b/ContentWeb/public/index.html
@@ -205,7 +205,7 @@
             </div>
             <div class="itemsFooter">
                 <h3>Empresa</h3>
-                <a href="">Preços</a>
+                <a href="">Planos</a>
             </div>
         </div>
         <div class="divCopy">
