Arrumar o PlaceHolder do Confirmar Senha

--- a/ContentWeb/public/web/cadastro.html
+++ b/ContentWeb/public/web/cadastro.html
@@ -62,7 +62,7 @@
                     <input maxlength="30" id="senha_input" type="password" placeholder="Senha">
 
                     <span class="tipo_campo"></span>
-                    <input maxlength="30" id="confirmacao_senha_input" type="password" placeholder="confirme sua senha">
+                    <input maxlength="30" id="confirmacao_senha_input" type="password" placeholder="Confirme sua senha">
                     <span class="alertaInput" id="alertaInput2"></span>
 
                     <button  class="btn" onclick="cadastrar()">Cadastrar</button>
