Ocultando botão do Index

--- a/ContentWeb/public/index.html
+++ b/ContentWeb/public/index.html
@@ -104,7 +104,7 @@
     <div class="imgContratar">
         <h2 class="h2Contratar">Monitoramento para o próximo nível!</h2>
         <h4 class="h4Contratar">Nossa filosofia é a segurança de sua plantação</h4>
-        <button>Contratar</button>
+      <!-- <button>Contratar</button> --> <!--Irá volta ápos a segunda Sprint-->
     </div>
 
     <div class="divInfo">
