--- a/ContentWeb/public/index.html
+++ b/ContentWeb/public/index.html
@@ -207,6 +207,15 @@
                 <h3>Empresa</h3>
                 <a href="">Planos</a>
             </div>
+            <div class="itemsFooter">
+                <h3>Contatos</h3>
+                <span><b>EMAIL: Cacaucontrol@gmail.com</b></span>
+                <span><b>TEL: (11) 4006-8541</b></span>
+            </div>
+            <div class="itemsFooter">
+                <h3>Endereço</h3>
+                <span><b>Rua Haddock Lobo, 595 São Paulo - SP</b></span>
+            </div>
         </div>
         <div class="divCopy">
             Copyright @ Cacau Control LTDA. 2022. Todos os direitos reservados
