att cor e pequenos erros

--- a/ContentWeb/public/index.html
+++ b/ContentWeb/public/index.html
@@ -174,12 +174,12 @@
 
     <div class="divNossoTime">
         <div class="divTextosMinhaEquipe">
-            <h3>Porquê escolher Cacau Control?</h3>
+            <h1>Porquê escolher Cacau Control?</h1>
             <h2>
-                Lutamos contra um inimigo escondido.
-                <h4>Queremos transformar a temperatura e a umidade em aliados, <br>
-                para assim, eliminar desperdícios e gerar maior qualidade nos frutos das plantações brasileiras. Trazendo o Brasil de volta ao topo!</h4> 
-            </h2>
+                Lutamos contra um inimigo escondido.</h2>
+                <h3>Queremos transformar a temperatura e a umidade em aliados, <br>
+                para assim, eliminar desperdícios e gerar maior qualidade nos frutos das plantações brasileiras. Trazendo o Brasil de volta ao topo !</h3> 
+            
         </div>
         <div class="divsFotos">
             <img class="itemTeam" src="web/imgs/mateus.jpeg" alt="mateus">
