diagrama de soluçao

--- a/ContentWeb/public/dashBoard/dashBoard.html
+++ b/ContentWeb/public/dashBoard/dashBoard.html
@@ -133,7 +133,7 @@
                     <div class="itemCardAlarm normal">
                         <h2>Sens.2</h2>
                         <i class="fa fa-solid fa-satellite-dish"></i>
-                        <div class="divInfoAlarm normal">NORMAL</div>
+                        <div class="divInfoAlarm normal">ESTÁVEL</div>
                     </div>
                     <div class="itemCardAlarm alerta">
                         <h2>Sens.3</h2>
