--- a/ContentWeb/public/web/simulador.html
+++ b/ContentWeb/public/web/simulador.html
@@ -12,8 +12,20 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Rajdhani:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+
+        <!-- font Awesome -->
+    <script src="https://kit.fontawesome.com/0de1e0c120.js" crossorigin="anonymous"></script>
+    <!--  -->
+        <link rel="stylesheet" href="../Calculadora/style/calculadora.css">
 </head>
 <body>
+   <div class="divHeader">
+    <a href="../index.html">
+        <div class="divReturn">
+          <i class="fa fa-solid fa-arrow-left"></i>
+        </div>
+    </a>
+   </div>
     <div class="divBlur"></div>
     <div class="container">
     <div class="card">
