--- a/ContentWeb/public/web/login.html
+++ b/ContentWeb/public/web/login.html
@@ -75,7 +75,7 @@
     <!--footer inicio-->
     <div class="footer">
         <div class="container">
-            <h4>Feito com amor por um aluno &hearts;SPTech &copy; 2022</h4>
+            <h4>   Copyright @ Cacau Control LTDA. 2022. Todos os direitos reservados</h4>
         </div>
     </div>
     <!--footer fim-->
