input colocada na area dos sensores

--- a/ContentWeb/public/dashBoard/dashBoard.html
+++ b/ContentWeb/public/dashBoard/dashBoard.html
@@ -84,9 +84,7 @@
         <div class="contentDashAll">
             <div class="divLeftDash">
                 <div class="divSensors">
-                    <div class="itemSensor itemSensorActive">Sens.1</div>
-                    <div class="itemSensor">Sens.2</div>
-                    <div class="itemSensor">Sens.3</div>
+                    <h4>Informe o número do sensor: <input type="number"></h4>
                 </div>
 
                 <div class="divControllers">
