add metricas no dashboard

--- a/ContentWeb/public/dashBoard/dashBoard.html
+++ b/ContentWeb/public/dashBoard/dashBoard.html
@@ -59,18 +59,7 @@
     <div class="contentAll">
         <div class="divnavDash">
             <div class="divInfoIndex">
-                <div class="divItemInfo">
-                    <div class="itemInfoColor normal"></div>
-                    <h4>Normal</h4>
-                </div>
-                <div class="divItemInfo">
-                    <div class="itemInfoColor alerta"></div>
-                    <h4>Alerta</h4>
-                </div>
-                <div class="divItemInfo">
-                    <div class="itemInfoColor critico"></div>
-                    <h4>Crítico</h4>
-                </div>
+                <img src="./imgs/metricas.png" alt="">
             </div>
             <div class="divNavtime">
                 <div class="divHora">10:15 AM</div>
