Adicionando HTML de Planos

--- a/ContentWeb/public/index.html
+++ b/ContentWeb/public/index.html
@@ -41,7 +41,9 @@
                     <a href="Calculadora/calculadora.html">
                     <li>Simulador</li>
                 </a>
+                <a href="web/planos.html">
                     <li>Planos</li>
+                </a>
                     <li>Contato</li>
                 </ul>
                 <div class="user">
@@ -205,7 +207,7 @@
             </div>
             <div class="itemsFooter">
                 <h3>Empresa</h3>
-                <a href="">Planos</a>
+                <a href="web/planos.html">Planos</a>
             </div>
             <div class="itemsFooter">
                 <h3>Contatos</h3>
