--- a/ContentWeb/public/dashBoard/dashBoard.html
+++ b/ContentWeb/public/dashBoard/dashBoard.html
@@ -29,7 +29,7 @@
     <title>DashBoard | Cacau Control</title>
   </head>
 
-  <body onload="validarSessao(), atualizarFeed()">
+  <body onload="validarSessao(),atualizacaoPeriodica()">
     <!-- side bar -->
     <div class="sideBar">
       <div class="divUser">
@@ -75,7 +75,6 @@
       <div class="contentDashAll">
         <div class="divLeftDash">
           <div class="divSensors">
-            <h4>Informe o número do sensor: <input type="number" /></h4>
           </div>
 
           <div class="divControllers">
@@ -83,7 +82,9 @@
               <h2>Temperatura</h2>
               <div class="divPainelItem temp">
                 <i class="fa fa-solid fa-temperature-low"></i>
-                <h1>30<span>℃</span></h1>
+                <h1 id="valorTemp">
+                  <!-- 30<span>℃</span> -->
+                </h1>
                 <i class="fa fa-solid fa-arrow-up"></i>
               </div>
             </div>
@@ -91,7 +92,9 @@
               <h2>Umidade</h2>
               <div class="divPainelItem umi">
                 <i class="fa fa-solid fa-water"></i>
-                <h1>60<span>%</span></h1>
+                <h1 id="valorUmi">
+                  <!-- 60<span>%</span> -->
+                </h1>
                 <i class="fa fa-solid fa-arrow-down"></i>
               </div>
             </div>
@@ -116,15 +119,15 @@
           <div class="divlabelAlarms">
             <h4>Alarmes</h4>
           </div>
-          <div class="divCardAlarms">
-            <div class="itemCardAlarm critico">
+          <div  class="divCardAlarms">
+            <div onclick="botao1()" class="itemCardAlarm critico">
               <h2>Sens.1</h2>
               <i class="fa fa-solid fa-satellite-dish"></i>
 
               <div class="divInfoAlarm critico">CRÍTICO</div>
             </div>
 
-            <div class="itemCardAlarm normal">
+            <div onclick="botao2()" class="itemCardAlarm normal">
               <h2>Sens.2</h2>
               <i class="fa fa-solid fa-satellite-dish"></i>
               <div class="divInfoAlarm normal">ESTÁVEL</div>
@@ -165,12 +168,201 @@
 <!-- <script src="scripts/graficoTemperatura.js"></script>
 <script src="scripts/graficoUmidade.js"></script> -->
 <script>
+
+  var valor 
+
   let proximaAtualizacao;
   let proximaAtualizacao2;
 
-  window.onload = obterDadosGrafico(1);
-  window.onload = obterDadosGrafico2(1);
+  var idSensor= 0
+
+function botao1(){
+  idSensor=1
+window.onload = obterDadosGrafico(idSensor);
+window.onload = obterDadosGrafico2(idSensor);
+
+}
+
+function botao2(){
+  idSensor=2
+window.onload = obterDadosGrafico(idSensor);
+window.onload = obterDadosGrafico2(idSensor);
+
+}
+
+function atualizacaoPeriodica() {
+  obterDadosTemperatura(idSensor);
+  obterDadosUmidade(idSensor)
+        setTimeout(atualizacaoPeriodica, 2000);
+    }
+
+
+    function obterDadosTemperatura(idSensor) {
+        fetch(`/medidas/tempo-realTemperatura/${idSensor}`)
+            .then(resposta => {
+
+                if (resposta.ok) {
+                    resposta.json().then(resposta => {
+
+                        console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+
+                        var dados = {
+                            temperatura: resposta[0].temperatura,
+                        }
+
+                        alertar(resposta[0].temperatura, idSensor);
+                    });
+                } else {
+
+                    console.error('Nenhum dado encontrado ou erro na API');
+                }
+            })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados do aquario p/ gráfico: ${error.message}`);
+            });
+    }
+
+    function alertar(temperatura, idSensor) {
+
+        var limitesTemperatura = {
+            muito_quente: 29,
+            quente: 27,
+            // ideal: 24/26,
+            frio: 23,
+            muito_frio: 21
+        };
+
+        // var classe_temperatura = 'itemCardAlarm';
+
+        // if (temperatura >= limites.muito_quente) {
+        //     classe_temperatura = 'cor-alerta perigo-quente';
+        //     console.log("caiu no 1")
+        // }
+        // else if (temperatura < limites.muito_quente && temperatura >= limites.quente) {
+        //     classe_temperatura = 'cor-alerta alerta-quente';
+        //     console.log("caiu no 2")
+        // }
+        // else if (temperatura < limites.quente && temperatura > limites.frio) {
+        //     classe_temperatura = 'cor-alerta ideal';
+        //     console.log("caiu no 3")
+        // }
+        // else if (temperatura <= limites.frio && temperatura > limites.muito_frio) {
+        //     classe_temperatura = 'cor-alerta alerta-frio';
+        //     console.log("caiu no 4")
+        // }
+        // else if (temperatura < limites.min_temperatura) {
+        //     classe_temperatura = 'cor-alerta perigo-frio';
+        //     console.log("caiu no 5")
+        // }
+
+        // var card;
+
+        // if (idAquario == 1) {
+        //     temp_aquario_1.innerHTML = temperatura + "°C";
+        //     card = card_1
+        // } else if (idAquario == 2) {
+        //     temp_aquario_2.innerHTML = temperatura + "°C";
+        //     card = card_2
+        // } else if (idAquario == 3) {
+        //     temp_aquario_3.innerHTML = temperatura + "°C";
+        //     card = card_3
+        // } else if (idAquario == 4) {
+        //     temp_aquario_4.innerHTML = temperatura + "°C";
+        //     card = card_4
+        // }
+
+        valorTemp.innerHTML = temperatura+"C°";
+        console.log("minha temp atual"+ temperatura)
+
+        // alterando
+        // card.className = classe_temperatura;
+
+    }
+
+
+
   
+    function obterDadosUmidade(idSensor) {
+        fetch(`/medidas/tempo-realUmidade/${idSensor}`)
+            .then(resposta => {
+
+                if (resposta.ok) {
+                    resposta.json().then(resposta => {
+
+                        console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+
+                        var dados = {
+                            umidade: resposta[0].umidade,
+                        }
+
+                        alertar1(resposta[0].umidade, idSensor);
+                    });
+                } else {
+
+                    console.error('Nenhum dado encontrado ou erro na API');
+                }
+            })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados do aquario p/ gráfico: ${error.message}`);
+            });
+    }
+
+    function alertar1(umidade, idSensor) {
+
+        // var limites = {
+        //     muito_quente: 23,
+        //     quente: 22,
+        //     ideal: 20,
+        //     frio: 10,
+        //     muito_frio: 5
+        // };
+
+        // var classe_temperatura = 'cor-alerta';
+
+        // if (temperatura >= limites.muito_quente) {
+        //     classe_temperatura = 'cor-alerta perigo-quente';
+        //     console.log("caiu no 1")
+        // }
+        // else if (temperatura < limites.muito_quente && temperatura >= limites.quente) {
+        //     classe_temperatura = 'cor-alerta alerta-quente';
+        //     console.log("caiu no 2")
+        // }
+        // else if (temperatura < limites.quente && temperatura > limites.frio) {
+        //     classe_temperatura = 'cor-alerta ideal';
+        //     console.log("caiu no 3")
+        // }
+        // else if (temperatura <= limites.frio && temperatura > limites.muito_frio) {
+        //     classe_temperatura = 'cor-alerta alerta-frio';
+        //     console.log("caiu no 4")
+        // }
+        // else if (temperatura < limites.min_temperatura) {
+        //     classe_temperatura = 'cor-alerta perigo-frio';
+        //     console.log("caiu no 5")
+        // }
+
+        // var card;
+
+        // if (idAquario == 1) {
+        //     temp_aquario_1.innerHTML = temperatura + "°C";
+        //     card = card_1
+        // } else if (idAquario == 2) {
+        //     temp_aquario_2.innerHTML = temperatura + "°C";
+        //     card = card_2
+        // } else if (idAquario == 3) {
+        //     temp_aquario_3.innerHTML = temperatura + "°C";
+        //     card = card_3
+        // } else if (idAquario == 4) {
+        //     temp_aquario_4.innerHTML = temperatura + "°C";
+        //     card = card_4
+        // }
+
+        valorUmi.innerHTML = umidade+"%";
+        console.log("minha temp atual"+ umidade)
+
+        // alterando
+        // card.className = classe_temperatura;
+
+    }
 
   b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
 
